# chartspeak

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
chartspeak/: __init__.py  api.py  errors.py  prompts.py  result.py  schema.py  spec.py  validate.py
chartspeak/backends/: __init__.py  base.py  mock.py  ollama.py
chartspeak/render/: __init__.py  base.py  matplotlib.py
tests/: conftest.py  test_api.py  test_render_matplotlib.py  test_repair_loop.py  test_schema.py  test_spec.py  test_validate.py
